Add the newest of structure and started styling grandmas

--- a/index.html
+++ b/index.html
@@ -7,57 +7,74 @@
 
 <body>
     <div class="header">
-        <div class="logo-links"></div>
+        <div class="logo-links">
+            <div class="logo">
+                Granny's Garden
+            </div>
+            <div class="links">
+                <ul>
+                    <li>Granny's Roadside Market</li>
+                    <li>Granny's Humble Hangout</li>
+                    <li>Granny's Spectacular Search</li>
+                </ul>
+            </div>
+        </div>
         <div class="duplet">
             <div class="triplet">
-                <div class="website-awesome"></div>
-                <div class="awesome-subtext"></div>
-                <div class="awesome-signin"></div>
+                <div class="website-awesome">
+                    Granny's Garden is Beautiful
+                </div>
+                <div class="awesome-subtext">
+                    Grandma grew up with gardens galore; graceful and galant, 
+                    she gave gifts for gods and goddesses of gaussian gradiance.
+                </div>
+                <button class="awesome-signin"></button>
             </div>
             <div class="frankenstein">
-                
+                This is the thing we dont talk about
             </div>
         </div>
     </div>
-    <div class="random"></div>
+    <div class="random">
         <div class="random-header">
-
+            The best flowers to ward off differing illnesses.
         </div>
         <div class="tiles">
             <div class="munchkin-ruler">
-                <div class="munchkin-minister"></div>
-                <div class="munchkin-slave"></div>
+                <div class="munchkin-minister">Flower One</div>
+                <div class="munchkin-slave">cures malfunctioning hardware</div>
             </div>
             <div class="munchkin-ruler">
-                <div class="munchkin-minister"></div>
-                <div class="munchkin-slave"></div>
+                <div class="munchkin-minister">Flower Two</div>
+                <div class="munchkin-slave">cures adult children who dont wash their hands</div>
             </div>
             <div class="munchkin-ruler">
-                <div class="munchkin-minister"></div>
-                <div class="munchkin-slave"></div>
+                <div class="munchkin-minister">Flower three</div>
+                <div class="munchkin-slave">cures not enough parking spaces</div>
             </div>
             <div class="munchkin-ruler">
-                <div class="munchkin-minister"></div>
-                <div class="munchkin-slave"></div>
+                <div class="munchkin-minister">Flower Four</div>
+                <div class="munchkin-slave">cures bad hips</div>
             </div>
         </div>
+    </div>
     <div class="quote">
-        <div class="Othellos-last-wish"></div>
-        <div class="every-english-teacher"></div>
+        <div class="Othellos-last-wish">something profound</div>
+        <div class="every-english-teacher">every-english-teacher</div>
     </div>
     <div class="call">
         <div class="centralbox">
             <div class="calling-grandma">
                 <div class="calling">
-
+                    Call grandma now to solve any issue you have!
                 </div>
                 <div class="grandma">
-
+                    Remember that response times may vary due to unscheduled naps andor spring cleaning.
                 </div>
             </div>
-            <div class="memory-erase">
-
-            </div>
+            <button class="memory-erase">
+                looks like you will have to press me again I dont remember you tapping me
+            </button>
         </div>
     </div>
     <div class="footer">
