Add the relevant structure and some styling decisions for the new troll page

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             </div>
             <div class="links">
                 <ul>
-                    <li>Granny's Roadside Market</li>
-                    <li>Granny's Humble Hangout</li>
-                    <li>Granny's Spectacular Search</li>
+                    <a href="https://www.route174roadsidemarket.com/our-greenhouse">Granny's Roadside Market</a>
+                    <a href="https://www.yelp.com/biz/grannys-tamales-houston-humble">Granny's Humble Hangout</a>
+                    <a href="https://woolpatterns.com/grannie-goes-large-free-crochet-pattern/">Granny's Spectacular Search</a>
                 </ul>
             </div>
         </div>
@@ -72,9 +72,7 @@
                     Remember that response times may vary due to unscheduled naps andor spring cleaning.
                 </div>
             </div>
-            <button class="memory-erase">
-                looks like you will have to press me again I dont remember you tapping me
-            </button>
+            <a href="./pressmeagain.html" class="button1" target="_blank">Try me</a>
         </div>
     </div>
     <div class="footer">
