Add various style to the header and grandma's garden image

--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
                     Grandma grew up with gardens galore; graceful and galant, 
                     she gave gifts for gods and goddesses of gaussian gradiance.
                 </div>
-                <button class="awesome-signin"></button>
+                <button class="awesome-signin">Sign Up!</button>
             </div>
-            <div class="frankenstein">
-                This is the thing we dont talk about
-            </div>
+            <img src='./grandmasgarden.png' class="frankenstein"></img>
         </div>
     </div>
     <div class="random">
