Add newest touches to the styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="header">
         <div class="logo-links">
             <div class="logo">
-                Granny's Garden
+                Granny's Garage
             </div>
             <div class="links">
                 <ul>
@@ -22,43 +22,51 @@
         <div class="duplet">
             <div class="triplet">
                 <div class="website-awesome">
-                    Granny's Garden is Beautiful
+                    Granny's Gorgeous Garageside Garden
                 </div>
                 <div class="awesome-subtext">
                     Grandma grew up with gardens galore; graceful and galant, 
                     she gave gifts for gods and goddesses of gaussian gradiance.
                 </div>
-                <button class="awesome-signin">Sign Up!</button>
+                <a href="./rose.png" class="awesome-signin">Generate a Rose!</a>
             </div>
-            <img src='./grandmasgarden.png' class="frankenstein"></img>
+            <img alt='grannystien' src='./grandmasgarden.png' class="frankenstein"></img>
         </div>
     </div>
     <div class="random">
         <div class="random-header">
-            The best flowers to ward off differing illnesses.
+            The best grandma to ward off differing illnesses.
         </div>
         <div class="tiles">
             <div class="munchkin-ruler">
-                <div class="munchkin-minister">Flower One</div>
-                <div class="munchkin-slave">cures malfunctioning hardware</div>
+                <img alt='grandmaeye' class="munchkin-minister-1" src="./absolutedisgustgrandma.png" ></img>
+                <div class="grandma-text">Disgusted Grandma</div>
+                <div class="munchkin-slave">Cures annoying chewing.</div>
             </div>
             <div class="munchkin-ruler">
-                <div class="munchkin-minister">Flower Two</div>
-                <div class="munchkin-slave">cures adult children who dont wash their hands</div>
+                <img alt='grandmasgotagun' class="munchkin-minister-2" src="./grandmasgun.png"></img>
+                <div class="grandma-text">Grandma Bond</div>
+                <div class="munchkin-slave">Cures adult children who dont wash their hands.</div>
             </div>
             <div class="munchkin-ruler">
-                <div class="munchkin-minister">Flower three</div>
-                <div class="munchkin-slave">cures not enough parking spaces</div>
+                <img alt='roadrage' class="munchkin-minister-3" src="./grandmaroadrage.png"></img>
+                <div class="grandma-text">Batma</div>
+                <div class="munchkin-slave">Cures not enough parking spaces.</div>
             </div>
             <div class="munchkin-ruler">
-                <div class="munchkin-minister">Flower Four</div>
-                <div class="munchkin-slave">cures bad hips</div>
+                <img alt='drum' class="munchkin-minister-4" src="./grannydrummer.png"></img>
+                <div class="grandma-text">Grandma Beatz</div>
+                <div class="munchkin-slave">Cures repetitive tapping.</div>
             </div>
         </div>
     </div>
     <div class="quote">
-        <div class="Othellos-last-wish">something profound</div>
-        <div class="every-english-teacher">every-english-teacher</div>
+        <div class="Othellos-last-wish">
+            "Parent-child relationships are complex. Grandmother-grandchild relationships are simple.
+             Grandmas are short on criticism and long on love."</div>
+        <div class="every-english-teacher">
+            - Janet Lanese
+        </div>
     </div>
     <div class="call">
         <div class="centralbox">
@@ -67,14 +75,14 @@
                     Call grandma now to solve any issue you have!
                 </div>
                 <div class="grandma">
-                    Remember that response times may vary due to unscheduled naps andor spring cleaning.
+                    Remember that response times may vary due to unscheduled naps and/or spring cleaning.
                 </div>
             </div>
-            <a href="./pressmeagain.html" class="button1" target="_blank">Try me</a>
+            <a href="./pressmeagain.html" class="button1" target="_blank">Try me!</a>
         </div>
     </div>
     <div class="footer">
-
+        <a href="https://github.com/TomNdPop" class="contact" target="_blank">@TomNdPop</a>
     </div>
 </body>
 
