--- a/pressmeagain.html
+++ b/pressmeagain.html
@@ -12,6 +12,7 @@
         <a href="./index.html" class="button1" target="_blank">
             I don't remember your purpose! Please try again!
         </a>
+        <img src="./confusion.png" alt="confusion">
     </div>
 </body>
 </html>
